Migrate to Hazelcast 5
Closes #185

Signed-off-by: Thomas Segismont <tsegismont@gmail.com>