@@ -16,8 +16,7 @@
   <properties>
     <stack.version>5.0.0-SNAPSHOT</stack.version>
     <asciidoc.dir>${project.basedir}/src/main/asciidoc</asciidoc.dir>
-    <hazelcast.version>4.2.8</hazelcast.version>
-    <hazelcast-kubernetes.version>2.2.3</hazelcast-kubernetes.version>
+    <hazelcast.version>5.3.2</hazelcast.version>
     <jar.manifest>${project.basedir}/src/main/resources/META-INF/MANIFEST.MF</jar.manifest>
   </properties>
 
@@ -69,7 +68,7 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.13.1</version>
+      <version>4.13.2</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -103,7 +102,7 @@
     <dependency>
       <groupId>org.assertj</groupId>
       <artifactId>assertj-core</artifactId>
-      <version>3.3.0</version>
+      <version>3.24.2</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -115,7 +114,7 @@
     <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
-      <version>1.2.0</version>
+      <version>1.4.7</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -150,7 +149,11 @@
               <hazelcast.logging.type>slf4j</hazelcast.logging.type>
             </systemPropertyVariables>
             <!-- Needs to be small enough to run in a EC2 1.7GB small instance -->
-            <argLine>-Xmx1200M</argLine>
+            <argLine>-Xmx1200M --add-modules java.se --add-exports java.base/jdk.internal.ref=ALL-UNNAMED --add-opens
+              java.base/java.lang=ALL-UNNAMED --add-opens java.base/sun.nio.ch=ALL-UNNAMED --add-opens
+              java.management/sun.management=ALL-UNNAMED --add-opens
+              jdk.management/com.sun.management.internal=ALL-UNNAMED
+            </argLine>
             <forkCount>1</forkCount>
             <reuseForks>true</reuseForks>
           </configuration>
@@ -169,7 +172,11 @@
               <hazelcast.logging.type>slf4j</hazelcast.logging.type>
             </systemPropertyVariables>
             <!-- Needs to be small enough to run in a EC2 1.7GB small instance -->
-            <argLine>-Xmx1200M</argLine>
+            <argLine>-Xmx1200M --add-modules java.se --add-exports java.base/jdk.internal.ref=ALL-UNNAMED --add-opens
+              java.base/java.lang=ALL-UNNAMED --add-opens java.base/sun.nio.ch=ALL-UNNAMED --add-opens
+              java.management/sun.management=ALL-UNNAMED --add-opens
+              jdk.management/com.sun.management.internal=ALL-UNNAMED
+            </argLine>
             <forkCount>1</forkCount>
             <reuseForks>true</reuseForks>
           </configuration>
